--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Are the stars lined up in your favour? Find out the astrological prediction<br>
 Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance will help you prepare for what's to come.<br>
 </h3>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="C:\Users\shrey\OneDrive\Documents\astro\aries.html" target="_blank"><img src="" width=150 height=250></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\aquarius.html" target="_blank"><img src="aquarius.html" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
+<a href="C:\Users\shrey\OneDrive\Documents\astro\aquarius.html" target="_blank"><img src="https://github.com/polarismaximoff/demo.github.io/blob/gh-pages/aquaries%20pic%202.jpg" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\cancer.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\cancer.jpg" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\capricorn.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\capricorn.jpg" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\gemini.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\gemini.jpg" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
