--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance wi
 </h3>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="C:\Users\shrey\OneDrive\Documents\astro\aries.html" target="_blank"><img src="aries.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\aquarius.html" target="_blank"><img src="aquarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\cancer.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\cancer.jpg" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
+<a href="C:\Users\shrey\OneDrive\Documents\astro\cancer.html" target="_blank"><img src="cancer.jpg" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\capricorn.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\capricorn.jpg" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\gemini.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\gemini.jpg" width=150 height=250></a>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\leo.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\leo.jpg" width=150 height=250></a><br><br>&nbsp;&nbsp;&nbsp;
