--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance wi
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="C:\Users\shrey\OneDrive\Documents\astro\aries.html" target="_blank"><img src="aries.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\aquarius.html" target="_blank"><img src="aquarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\cancer.html" target="_blank"><img src="cancer.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\capricorn.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\capricorn.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="C:\Users\shrey\OneDrive\Documents\astro\capricorn.html" target="_blank"><img src="capricorn.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\gemini.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\gemini.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\leo.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\leo.jpg" width=150 height=250/><br><br>&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;<a href="C:\Users\shrey\OneDrive\Documents\astro\libra.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\libra.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
