--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance wi
 <a href="C:\Users\shrey\OneDrive\Documents\astro\capricorn.html" target="_blank"><img src="capricorn.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\gemini.html" target="_blank"><img src="gemini.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\leo.html" target="_blank"><img src="leo.jpg" width=150 height=250/><br><br>&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;<a href="C:\Users\shrey\OneDrive\Documents\astro\libra.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\libra.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\pisces.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\pisces.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\sagittarius.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\saggittarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\scorpio.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\scorpio.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\taurus.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\taurus.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\virgo.html" target="_blank"><img src="C:\Users\shrey\Downloads\zodiac\virgo.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;<a href="C:\Users\shrey\OneDrive\Documents\astro\libra.html" target="_blank"><img src="libra.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="C:\Users\shrey\OneDrive\Documents\astro\pisces.html" target="_blank"><img src="pisces.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="C:\Users\shrey\OneDrive\Documents\astro\sagittarius.html" target="_blank"><img src="saggittarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="C:\Users\shrey\OneDrive\Documents\astro\scorpio.html" target="_blank"><img src="scorpio.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="C:\Users\shrey\OneDrive\Documents\astro\taurus.html" target="_blank"><img src="taurus.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="C:\Users\shrey\OneDrive\Documents\astro\virgo.html" target="_blank"><img src="virgo.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 </body>
 </html>
