--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Choose your sign<br>
 Are the stars lined up in your favour? Find out the astrological prediction<br>
 Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance will help you prepare for what's to come.<br>
 </h3>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="C:\Users\shrey\OneDrive\Documents\astro\aries.html" target="_blank"><img src="aries.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="aries.html" target="_blank"><img src="aries.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\aquarius.html" target="_blank"><img src="aquarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\cancer.html" target="_blank"><img src="cancer.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="C:\Users\shrey\OneDrive\Documents\astro\capricorn.html" target="_blank"><img src="capricorn.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
