--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@ Are the stars lined up in your favour? Find out the astrological prediction<br>
 Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance will help you prepare for what's to come.<br>
 </h3>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="aries.html" target="_blank"><img src="aries.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\aquarius.html" target="_blank"><img src="aquarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\cancer.html" target="_blank"><img src="cancer.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\capricorn.html" target="_blank"><img src="capricorn.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\gemini.html" target="_blank"><img src="gemini.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\leo.html" target="_blank"><img src="leo.jpg" width=150 height=250/><br><br>&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;<a href="C:\Users\shrey\OneDrive\Documents\astro\libra.html" target="_blank"><img src="libra.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\pisces.html" target="_blank"><img src="pisces.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\sagittarius.html" target="_blank"><img src="saggittarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\scorpio.html" target="_blank"><img src="scorpio.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\taurus.html" target="_blank"><img src="taurus.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="C:\Users\shrey\OneDrive\Documents\astro\virgo.html" target="_blank"><img src="virgo.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="aquarius.html" target="_blank"><img src="aquarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="cancer.html" target="_blank"><img src="cancer.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="capricorn.html" target="_blank"><img src="capricorn.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="gemini.html" target="_blank"><img src="gemini.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="leo.html" target="_blank"><img src="leo.jpg" width=150 height=250/><br><br>&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;<a href="libra.html" target="_blank"><img src="libra.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="pisces.html" target="_blank"><img src="pisces.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="sagittarius.html" target="_blank"><img src="saggittarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="scorpio.html" target="_blank"><img src="scorpio.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="taurus.html" target="_blank"><img src="taurus.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="\virgo.html" target="_blank"><img src="virgo.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 </body>
 </html>
