--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance wi
 <a href="sagittarius.html" target="_blank"><img src="saggittarius.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="scorpio.html" target="_blank"><img src="scorpio.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 <a href="taurus.html" target="_blank"><img src="taurus.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
-<a href="\virgo.html" target="_blank"><img src="virgo.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
+<a href="virgo.html" target="_blank"><img src="virgo.jpg" width=150 height=250/>&nbsp;&nbsp;&nbsp;
 </body>
 </html>
