--- a/aries.html
+++ b/aries.html
@@ -9,7 +9,7 @@ aries
 <h1>
 ARIES TRAITS
 </h1>
-&nbsp;&nbsp;&nbsp; <img src="aries pic 2.jpg" width="890" height="270">
+&nbsp;&nbsp;&nbsp; <img src="aries pic 2.jpg" width="890" height="270"/>
 <p>
 <h3>
 &nbsp;&nbsp;&nbsp;As the first sign in the zodiac, the presence of Aries always marks the beginning of something energetic and turbulent. They are continuously looking for &nbsp;&nbsp;&nbsp;dynamic, speed and competition, always being the first in everything - from work to social gatherings. Thanks to its ruling planet Mars and the fact it &nbsp;&nbsp;&nbsp;belongs to the element of Fire (just like Leo and Sagittarius), Aries is one of the most active zodiac signs. It is in their nature to take action, sometimes &nbsp;&nbsp;&nbsp;before they think about it well.
