--- a/aquarius.html
+++ b/aquarius.html
@@ -9,7 +9,7 @@ aquarius
 <h1>
 AQUARIUS TRAITS
 </h1>
-&nbsp;&nbsp;&nbsp; <img src="C:\Users\shrey\Downloads\zodiac\aquaries pic 2.jpg" width="890" height="270">
+&nbsp;&nbsp;&nbsp; <img src="aquaries pic 2.jpg" width="890" height="270"/>
 <p>
 <h3>
 &nbsp;&nbsp;&nbsp;The 11th sign of the zodiac, Aquarius is represented by the Water Bearer, a symbol of the Gods bringing nourishment to Earth. People born under the Aquarius sign are said to be progressive, independent, intelligent, unique, and idealistic.
