--- a/cancer.html
+++ b/cancer.html
@@ -9,7 +9,7 @@ cancer
 <h1>
 CANCER TRAITS
 </h1>
-&nbsp;&nbsp;&nbsp; <img src="C:\Users\shrey\Downloads\zodiac\cancer pic 2.jpg" width="890" height="270">
+&nbsp;&nbsp;&nbsp; <img src="cancer pic 2.jpg" width="890" height="270"/>
 <p>
 <h3>
 &nbsp;&nbsp;&nbsp;Cancer is the fourth sign of the zodiac and is represented by the Crab. They're primarily known for being emotional, nurturing, and highly intuitive, as well as sensitive and at times insecure. Their elemental sign is water (as it is for Pisces and Scorpio ), which makes sense when you consider the emotional depths associated with this sign.
