--- a/capricorn.html
+++ b/capricorn.html
@@ -9,7 +9,7 @@ capricorn
 <h1>
 CAPRICORN TRAITS
 </h1>
-&nbsp;&nbsp;&nbsp; <img src="C:\Users\shrey\Downloads\zodiac\carpricorn pic 2.jpg" width="890" height="270">
+&nbsp;&nbsp;&nbsp; <img src="carpricorn pic 2.jpg" width="890" height="270"/>
 <p>
 <h3>
 &nbsp;&nbsp;&nbsp;Capricorn is a sign that represents time and responsibility, and its representatives are traditional and often very serious by nature. These individuals possess an inner state of independence that enables significant progress both in their personal and professional lives. They are masters of self-control and have the ability to lead the way, make solid and realistic plans, and manage many people who work for them at any time. They will learn from their mistakes and get to the top based solely on their experience and expertise.
