--- a/gemini.html
+++ b/gemini.html
@@ -9,7 +9,7 @@ gemin
 <h1>
 GEMINI TRAITS
 </h1>
-&nbsp;&nbsp;&nbsp; <img src="C:\Users\shrey\Downloads\zodiac\gemini pic 2.jpg" width="890" height="270">
+&nbsp;&nbsp;&nbsp; <img src="gemini pic 2.jpg" width="890" height="270"/>
 <p>
 <h3>
 &nbsp;&nbsp;&nbsp;Expressive and quick-witted, Gemini represents two different personalities in one and you will never be sure which one you will face. They are sociable, communicative and ready for fun, with a tendency to suddenly get serious, thoughtful and restless. They are fascinated with the world itself, extremely curious, with a constant feeling that there is not enough time to experience everything they want to see.
