--- a/pisces.html
+++ b/pisces.html
@@ -9,7 +9,7 @@ pisces
 <h1>
 PISCES TRAITS
 </h1>
-&nbsp;&nbsp;&nbsp; <img src="C:\Users\shrey\Downloads\zodiac\pisces pic.jpg" width="890" height="270">
+&nbsp;&nbsp;&nbsp; <img src="pisces pic.jpg" width="890" height="270"/>
 <p>
 <h3>
 &nbsp;&nbsp;&nbsp;Pisces are very friendly and often find themselves in company of very different people. They are selfless and always willing to help others, a very fine intent for as long as they don’t expect anything much in return. People born with their Sun in Pisces have an intuitive understanding of the life cycle and form incredible emotional relationship with other humans on the basis of natural order and senses guiding them.
