--- a/sagittarius.html
+++ b/sagittarius.html
@@ -9,7 +9,7 @@ sagittarius
 <h1>
 SAGITITAURIUS TRAITS
 </h1>
-&nbsp;&nbsp;&nbsp; <img src="C:\Users\shrey\Downloads\zodiac\sagittaurius pic.jpg" width="890" height="270">
+&nbsp;&nbsp;&nbsp; <img src="sagittaurius pic.jpg" width="890" height="270"/>
 <p>
 <h3>
 &nbsp;&nbsp;&nbsp;Curious and energetic, Sagittarius are the travelers of the zodiac. Their open mind and philosophical view motivate them to wander around the world in search of the meaning of life. Sagittarius is an extrovert, always optimistic, full of enthusiasm, and ready for changes. This is a Sun sign of individuals who are often preoccupied with mental work, but when they find grounding, they show their ability to transform visions and thoughts into concrete actions and circumstances.
