--- a/scorpio.html
+++ b/scorpio.html
@@ -9,7 +9,7 @@ scorpio
 <h1>
 SCORPIO TRAITS
 </h1>
-&nbsp;&nbsp;&nbsp; <img src="C:\Users\shrey\Downloads\zodiac\scorpio pic.jpg" width="710" height="270">
+&nbsp;&nbsp;&nbsp; <img src="scorpio pic.jpg" width="710" height="270"/>
 <p>
 <h3>
 &nbsp;&nbsp;&nbsp;Scorpios are passionate and assertive people with determination and focus you rarely see in other zodiac signs. They will turn to in-depth research to reach the truth behind anything they find important. Great leaders and guides, Scorpios are resourceful, dedicated and fearless when there is challenge to be overcome. They will hold on to other people’s secrets, even when they aren’t very fond of them to begin with and do anything they can for those they tie themselves to.
