--- a/taurus.html
+++ b/taurus.html
@@ -27,8 +27,8 @@ TAURUS TRAITS
 <ul>
 <li>Strengths: Courageous, determined, confident, enthusiastic, optimistic, honest, passionate</li>
 <li>Weaknesses: Impatient, moody, short-tempered, impulsive, aggressive</li>
-<li>Aries likes: Comfortable clothes, taking on leadership roles, physical challenges, individual sports</li>
-<li>Aries dislikes: Inactivity, delays, work that does not use one's talents</li>
+<li>Taurus likes: Gardening, cooking, music, romance, high quality clothes, working with hands</li>
+<li>Taurus dislikes: Sudden changes, complications, insecurity of any kind, synthetic fabric</li>
 </ul>
 </font>
 </h3>
