--- a/virgo.html
+++ b/virgo.html
@@ -26,8 +26,8 @@ Greatest Overall Compatibility : Scorpio, Capricorn, Taurus, Cancer
 <ul>
 <li>Strengths: Courageous, determined, confident, enthusiastic, optimistic, honest, passionate</li>
 <li>Weaknesses: Impatient, moody, short-tempered, impulsive, aggressive</li>
-<li>virgo likes: Comfortable clothes, taking on leadership roles, physical challenges, individual sports</li>
-<li>virgo dislikes: Inactivity, delays, work that does not use one's talents</li>
+<li> Virgo likes: Animals, healthy food, books, nature, cleanliness</li>
+<li> Rudeness, asking for help, taking center stag</li>
 </ul>
 </font>
 </h3>
