--- a/virgo.html
+++ b/virgo.html
@@ -27,7 +27,7 @@ Greatest Overall Compatibility : Scorpio, Capricorn, Taurus, Cancer
 <li>Strengths: Courageous, determined, confident, enthusiastic, optimistic, honest, passionate</li>
 <li>Weaknesses: Impatient, moody, short-tempered, impulsive, aggressive</li>
 <li> Virgo likes: Animals, healthy food, books, nature, cleanliness</li>
-<li> Rudeness, asking for help, taking center stag</li>
+<li> virgo dislikes :Rudeness, asking for help, taking center stag</li>
 </ul>
 </font>
 </h3>
