--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ astrology
 <body bgcolor="black">
 <font color="BFBFBF">
 <h1>
-Welcome to Astrology<br>
+Welcome to Astrology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="                                                                                                                                      
+<br>
 </h1>
 <h3>
 Choose your sign<br>
