--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ astrology
 <body bgcolor="black">
 <font color="BFBFBF">
 <h1>
-Welcome to Astrology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="form.html" target="_blank"/>sign up                                                                                                                                     
+Welcome to Astrology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="form.html" target="_blank">sign up</a>                                                                                                                                     
 <br>
 </h1>
 <h3>
