--- a/form.html
+++ b/form.html
@@ -5,11 +5,12 @@
     </title>
   </head>
   <body>
+    <h1>sign up </h1>
     <form>
-      name:<input type="text" name="name"><br>
+      name:<input type="text" name="name"><br><br>
       gender:<input type="radio" name="gender">male
-      <input type="radio" name="gender2">female
-      <select name="sign">
+      <input type="radio" name="gender2">female<br><br>
+      zodiac sign:<select name="sign">
         <option value="aries">aries</option>
         <option value="taurus">ataurus</option>
         <option value="aries">aries</option>
@@ -17,10 +18,10 @@
         <option value="cancer">cancer</option>
         <option value="leo">leo</option>
         <option value="virgo">virgo</option>
-        </select >
-      email:<input type="email" name="email"><br>
-      username:<input type="text" name="username"><br>
-      password:<input type="password" name="pass"><br>
+        </select ><br><br>
+      email:<input type="email" name="email"><br><br>
+      username:<input type="text" name="username"><br><br>
+      password:<input type="password" name="pass"><br><br>
       <input type="button" value="submit">
     </form>
   </body>
