--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ astrology
 <body bgcolor="black">
 <font color="BFBFBF">
 <h1>
-Welcome to Astrology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="form.html" target="_blank">sign up</a>                                                                                                                                     
+  Welcome to Astrology <h3 align="right"><a href="form.html" target="_blank">sign up</a></h3>                                                                                                                                     
 <br>
 </h1>
 <h3>
