--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@ astrology
 <body bgcolor="black">
 <font color="BFBFBF">
 <h1>
-  Welcome to Astrology <h3 align="right"><a href="form.html" target="_blank">sign up</a></h3>                                                                                                                                     
+  Welcome to Astrology </h1><h2 align="right"><a href="form.html" target="_blank">sign up</a></h2>                                                                                                                                     
 <br>
-</h1>
 <h3>
 Choose your sign<br>
 Are the stars lined up in your favour? Find out the astrological prediction<br>
