--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ astrology
 <body bgcolor="black">
 <font color="BFBFBF">
 <h1>
-  Welcome to Astrology </h1><h2 align="right"><a href="form.html" target="_blank">sign up</a></h2>                                                                                                                                     
+  Welcome to Astrology </h1>                                                                                                                                   
 <br>
 <h3>
+sign in here <a href="form.html" target="_blank">sign up</a>
 Choose your sign<br>
 Are the stars lined up in your favour? Find out the astrological prediction<br>
 Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance will help you prepare for what's to come.<br>
