--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ astrology
   Welcome to Astrology </h1>                                                                                                                                   
 <br>
 <h3>
-sign in here <a href="form.html" target="_blank">sign up</a>
+sign in here <a href="form.html" target="_blank">sign up</a><br>
 Choose your sign<br>
 Are the stars lined up in your favour? Find out the astrological prediction<br>
 Unpack the mysteries of the universe with our horoscopes! Our cosmic guidance will help you prepare for what's to come.<br>
